1차 작업
